Status page toaster

--- a/src/app/modules/layout/page/page.component.html
+++ b/src/app/modules/layout/page/page.component.html
@@ -65,4 +65,5 @@
 ></m-modal-signup>
 
 <m-channel--onboarding *ngIf="showOnboarding"></m-channel--onboarding>
+<m-statusToaster></m-statusToaster>
 <m-formToast></m-formToast>
