Remove help refs #4917

--- a/src/app/modules/aux-pages/pages/contact/contact.component.html
+++ b/src/app/modules/aux-pages/pages/contact/contact.component.html
@@ -2,12 +2,7 @@
 <h3>General Enquiries and Support</h3>
 <ul>
   <li>
-    <p>
-      <a routerLink="/groups/profile/100000000000000681/activity"
-        >Help & Support Group</a
-      >
-      (often the fastest way to get in touch)
-    </p>
+    <p><a href="https://support.minds.com/" target="_blank">Help Desk</a></p>
   </li>
   <li>
     <p><a href="mailto:info@minds.com">info@minds.com</a></p>
