--- a/src/app/modules/aux-pages/pages/terms/terms.component.html
+++ b/src/app/modules/aux-pages/pages/terms/terms.component.html
@@ -4,12 +4,9 @@
   We (the people who work with Minds) create free and open source software and
   run the Minds.com social network. We would love for you to use it and help us
   evolve this document in the direction that best supports and protects Minds
-  and its community. Public commentary and peer-review is encouraged via the
-  <a routerLink="/groups/profile/100000000000000681/feed"
-    >Help & Support Group</a
-  >
-  and also on <a target="_blank" href="https://gitlab.com/minds">Gitlab</a>. The
-  Minds basic service of creating a channel or launching a presence on
+  and its community. Public commentary and peer-review is encouraged on
+  <a target="_blank" href="https://gitlab.com/minds">Gitlab</a>. The Minds basic
+  service of creating a channel or launching a presence on
   <a routerLink="/">Minds.com</a> is free. We also offer paid upgrades for
   advanced features and other commercial services.
 </p>
