Update withdrawal notice #4930

--- a/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
+++ b/src/app/modules/wallet/components/components/onchain-transfer/onchain-transfer.component.html
@@ -148,10 +148,11 @@
       <div class="m-walletSecondaryText--desc">
         <p
           class="m-walletSecondaryText"
-          i18n="@@WALLETV2_ONCHAIN_TRANSFER__YOU_CAN_REQUEST_UP_TO_25000"
+          i18n="@@WALLETV2_ONCHAIN_TRANSFER__UP_TO_X_NO_REJECT_REFUND"
         >
           You can request to transfer up to 25,000 tokens from your rewards to
-          your on-chain wallet. You may only transfer once per day.
+          your on-chain wallet. If your withdrawal request is rejected due to a
+          terms of service violation, the fees are non-refundable.
         </p>
         <p
           class="m-walletSecondaryText"
