--- a/src/app/modules/newsfeed/single/single.component.html
+++ b/src/app/modules/newsfeed/single/single.component.html
@@ -3,11 +3,12 @@
     [class.m-pageLayout__container]="!showLegacyActivity"
     [class.m-newsfeed__single--legacy]="showLegacyActivity"
   >
-    <m-error-splash *ngIf="error && !inProgress"></m-error-splash>
+    <m-errorSplash class="m-pageLayout__pane--main" *ngIf="error && !inProgress"></m-errorSplash>
 
     <div
       [class.m-pageLayout__pane--main]="!showLegacyActivity"
       style="padding-bottom: 37px;"
+      *ngIf="!error" 
     >
       <m-loadingSpinner [inProgress]="inProgress"></m-loadingSpinner>
 
