Revert unneeeded change

--- a/src/stylesheets/components/components.scss
+++ b/src/stylesheets/components/components.scss
@@ -393,7 +393,7 @@ minds-button-user-dropdown {
   }
 }
 
-.m-errorSplash {
+.m-error-splash {
   text-align: center;
   text-transform: uppercase;
   padding-top: 12px;
