delete proposal working

--- a/src/app/modules/governance/card/card.component.html
+++ b/src/app/modules/governance/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="m-governance__card-container">
   <div class="m-application-meta">
-    <h2 class="m-user">
+    <div  class="m-governance__card-arrow-h2  m-user">
       {{ proposal.title }}
-    </h2>
+    </div>
     <div class="m-governance__card-status">
       {{ proposal.state }}
     </div>
