--- a/src/app/modules/report/creator/creator.component.html
+++ b/src/app/modules/report/creator/creator.component.html
@@ -2,7 +2,9 @@
   <div class="m-reportCreator__header">
     <h2>
       <span i18n="Report as flag something@@M__COMMON__REPORT">Report</span>
-      <span *ngIf="isAdmin" class="m-reportCreator__header--admin">(Admin)</span>
+      <span *ngIf="isAdmin" class="m-reportCreator__header--admin"
+        >(Admin)</span
+      >
     </h2>
   </div>
 
