[WIP] proposal post created

--- a/src/app/modules/newsfeed/feeds/subscribed.component.html
+++ b/src/app/modules/newsfeed/feeds/subscribed.component.html
@@ -44,6 +44,10 @@
       </ng-container>
     </ng-container>
 
+    <ng-container>
+      <m-proposal></m-proposal>
+    </ng-container>
+
     <ng-container
       *ngFor="let activity$ of feedsService.feed | async; let i = index"
     >
