--- a/src/app/modules/governance/proposal-detail/proposal-detail.component.html
+++ b/src/app/modules/governance/proposal-detail/proposal-detail.component.html
@@ -16,9 +16,21 @@
         ></m-governance--proposal-detail-dropdown>
       </div>
 
-      <div class="m-governance__card-status">
-        {{ proposal.state }}
-      </div>
+      <div
+      [ngClass]="{
+        'm-governance__card-status-green': proposal.state === 'closed' || proposal.state === 'active',
+        'm-governance__card-orange': proposal.state === 'pending',
+        'm-governance__card-status-red' : proposal.state === 'rejected'
+      }"
+      class="m-governance__card-status m-governance__card-status-text"
+    >
+      <m-icon
+        *ngIf="proposal.state === 'closed'"
+        class="m-governance__card-check m-governance__card-status-green"
+        iconId="check"
+      ></m-icon>
+      {{ proposal.state }}
+    </div>
       <div
         class="m-governance--proposal-detail-body-title"
         [innerHTML]="proposal.body"
