--- a/src/app/modules/governance/filter-selector/filter-selector.component.html
+++ b/src/app/modules/governance/filter-selector/filter-selector.component.html
@@ -1,21 +1,23 @@
 <div class="mdl-cell mdl-cell--12-col">
   <m-dropdown #dropdown>
     <label i18n="@@HELPDESK__EDIT__CATEGORIES__TITLE">
-      {{ filter === '' ? 'All' : filter }}
-      <i
+      {{ filter === '' ? 'All' : filter }} 
+      <span>outcomes</span>
+      <m-icon
         class="
           material-icons
           m-dropdown--label-icon m-dropdown--label-icon-inactive
         "
-        >keyboard_arrow_down</i
-      >
-      <i
+        iconId="arrow_drop_down"
+      ></m-icon>
+
+      <m-icon
         class="
           material-icons
           m-dropdown--label-icon m-dropdown--label-icon-active
         "
-        >keyboard_arrow_up</i
-      >
+        iconId="arrow_drop_up"
+      ></m-icon>
     </label>
 
     <ul class="m-dropdown--list">
@@ -24,7 +26,7 @@
         [class.m-dropdown--list--item--selected]="filter === ''"
         (click)="dropdown.toggle(); selectCategory('')"
       >
-        All
+        All outcomes
       </li>
 
       <li
@@ -32,23 +34,23 @@
         [class.m-dropdown--list--item--selected]="filter === 'active'"
         (click)="dropdown.toggle(); selectCategory('active')"
       >
-        Active
+        Active outcomes
       </li>
 
       <li
         class="m-dropdown--list--item"
-        [class.m-dropdown--list--item--selected]="filter === 'rejected'"
+        [class.m-dropdown--list--item--selected]="filter === 'pending'"
         (click)="dropdown.toggle(); selectCategory('pending')"
       >
-        Pending
+        Pending outcomes
       </li>
 
       <li
         class="m-dropdown--list--item"
-        [class.m-dropdown--list--item--selected]="filter === 'finished'"
+        [class.m-dropdown--list--item--selected]="filter === 'closed'"
         (click)="dropdown.toggle(); selectCategory('closed')"
       >
-        Enacted
+        Enacted outcomes
       </li>
     </ul>
   </m-dropdown>
