--- a/src/app/modules/governance/filter-selector/filter-selector.component.scss
+++ b/src/app/modules/governance/filter-selector/filter-selector.component.scss
@@ -2,8 +2,12 @@ m-governance--filter-selector {
   margin-right: 7px;
   .mdl-cell {
     label {
-      text-transform: capitalize;
       cursor: pointer;
+      font-size: 16px;
+      text-transform: capitalize;
+      span {
+        text-transform: none;
+      }
     }
   }
 }
