--- a/src/app/modules/mobile/marketing/marketing.component.html
+++ b/src/app/modules/mobile/marketing/marketing.component.html
@@ -26,7 +26,9 @@
         </div>
 
         <div class="m-marketing__gridItemActions">
-          <a [href]="latestRelease.href" target="_blank"
+          <a
+            href="https://cdn-assets.minds.com/mobile/Minds-stable-4-17-0.apk"
+            target="_blank"
             ><img
               src="{{ cdnAssetsUrl }}assets/marketing/mobile/download-minds.svg"
               height="40"
