(fix): notification issues with timestamp and template unavailable - closes #4982

--- a/src/app/modules/notifications/v3/notification.component.html
+++ b/src/app/modules/notifications/v3/notification.component.html
@@ -60,7 +60,7 @@
         </div>
         <div class="m-notificationsNotification__timestamp">
           <span>{{
-            notification.created_timestamp * 1000 | friendlydatediff: '':false
+            notification.created_timestamp | friendlydatediff: '':false
           }}</span>
         </div>
         <span
